fix: bad database constraints

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -12,7 +12,8 @@
     "room": {
       "available": "No classes are currently in this room.",
       "scheduled": "Current Class: {{activity}}",
-      "contributor": "Contributed By: {{name}}"
+      "contributor": "Contributed By: {{name}}",
+      "anonymous": "Anonymous"
     }
   },
   "login": {
