--- a/public/locales/zh-CN/translation.json
+++ b/public/locales/zh-CN/translation.json
@@ -12,7 +12,8 @@
     "room": {
       "available": "此房间目前没有课程。",
       "scheduled": "当前课程: {{activity}}",
-      "contributor": "贡献者: {{name}}"
+      "contributor": "贡献者: {{name}}",
+      "anonymous": "匿名"
     }
   },
   "login": {
